--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.firebaseui:firebase-ui-auth:5.1.0'
-
-    implementation 'io.paperdb:paperdb:2.6'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:5.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
